--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                  alt="Mateo Rivas" 
                                  class="profile-image">
                         </div>
-                        <h1 class="name">Sanjay K</h1>
+                        <h1 class="name">Sanjay babu k</h1>
                         <p class="title">Frontend Developer</p>
                     </div>
 
@@ -115,7 +115,7 @@
                             <a href="mailto:sanjugowda1239@gmail.com" class="contact-link">
                                 ✉️ sanjugowda1239@gmail.com
                             </a>
-                            <a href="https://linkedin.com/in/sanjugowda" target="_blank" class="contact-link">
+                            <a href="https://www.linkedin.com/in/sanjay-sanju-1a465a334?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="contact-link">
                                 🔗 LinkedIn
                             </a>
                             <a href="https://github.com/mateorivas" target="_blank" class="contact-link">
